   signatures that happen outside of function/method calls. Fall back to the
   file/line number as a frame description instead. This will do a much better
   job at disambiguating e. g. different ImportError crashes. (LP: #920403)
 - Make "binary changed since the time of the crash" error message more
   comprehensible, thanks Paolo Rotolo. (LP: #942830)

Improvements:
 - test/run: Drop "local" argument. This now tests against the source tree when
   run in the source tree root, and against the system libraries/programs when
   run from anywhere else.
 - test/run: Consider command line arguments as test names and only run those
   when given.
 - testsuite: Force the skipping of online tests when $SKIP_ONLINE_TESTS is
   set.
 - hookutils.py, xsession_errors(): Add a reasonable default pattern which
   matches glib-style warnings, errors, criticals etc. and X window errors.
   In data/general-hooks/generic.py, call it with that default instead of the
   rather incomplete custom pattern. (LP: #932660)
 - packaging.py: Add get_package_origin() method, and implement it for
   apt-dpkg.
 - report.py, add_package_info(): Add "[origin: ...]" tag to "Package" and
   "Dependencies" fields for any package which is not native to the
   distribution. If any such package is present, tag the report with
   "third-party-packages" in data/general-hooks/generic.py. (LP: #927912)

1.93 (2012-02-23):
------------------
Bug fixes:
 - apport-gtk: Fix crash on nonexisting icon. Thanks Evan Dandrea.
   (LP: #937354)
 - ui.py, open_url(): Revert back to calling sudo instead of dropping
   privileges ourselves; with the latter, calling firefox as the sudo'ing user
   fails. (LP: #916810, #938128)
 - ui.py: Fix aborting with "AssertionError" if the report is already known,
   but without an URL. (LP: #938778)
 - launchpad.py: If a bug is already known, but the report is private, do not
   send the report. There is little sense piling up lots of duplicates.
   (LP: #938700)